# blah

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  ci-build.sh  ci-install-packages.sh  ci-package.sh  overview.drawio  source-common.sh  source-pi.sh  system-diagram.drawio
build-guide/: README.md  troubleshoot-decisions.drawio
firmware/: .gitignore  CMakeLists.txt  LICENSE
firmware/src/: CMakeLists.txt  clock_gen.c  clock_gen.h  fifo.c  fifo.h  main.c  main0.c  main1.c  pcm1802.c  pcm1802.h  usb_audio.c  usb_audio_format.c  usb_audio_format.h  usb_descriptors.c  usb_descriptors.h
firmware/src/libsi5351/: LICENSE  README.md  asserts.h  errors.h  si5351.c  si5351.h
hardware/: .gitignore
hardware/main-board/: adafruit-si5351.kicad_sym  black-pcm1802.kicad_sym  clock-gen-main-board.kicad_pcb  clock-gen-main-board.kicad_prl  clock-gen-main-board.kicad_pro  clock-gen-main-board.kicad_sch  fp-lib-table  sym-lib-table
hardware/main-board/adafruit-si5351-freecad/: adafruit-si5351-breakout.FCStd  adafruit-si5351-breakout.wrl
hardware/main-board/adafruit-si5351.pretty/: Adafruit_Si5351A_Breakout_Board.kicad_mod
hardware/main-board/black-pcm1802-freecad/: black-pcm1802-breakout-board.wrl  black-pcm1802-breakout.FCStd
hardware/main-board/black-pcm1802.pretty/: black-pcm1802-board.kicad_mod
hardware/raspberrypi-pico-lib/: README.md
hardware/vt610ex-clock-generator-adapter/: README.md  custom-vt610ex-sc3a.kicad_sym  fp-lib-table  sym-lib-table  vt610ex-sc3a-clock-gen-adapter.kicad_pcb  vt610ex-sc3a-clock-gen-adapter.kicad_prl  vt610ex-sc3a-clock-gen-adapter.kicad_pro  vt610ex-sc3a-clock-gen-adapter.kicad_sch
mechanical/: .gitignore  README.md
mechanical/enclosure-01/: bottom.stl  enclosure-01.FCStd  lid.stl  mount-base.stl  mount-clip.stl
mechanical/pc-bracket-rca/: bracket-2rca.stl  bracket-3rca.stl  pc-bracket-rca.FCStd
scripts/: README.md  collect-info.sh  imhex-debug-pattern.hexpat
(+3 files in other folders)
